video 91-93 covered. We have learned about YAML and instead of using application.properties we are using application.yml

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ guru.username=John
 guru.password=somepass
 guru.dburl=someurl
 
-guru.jms.username=Jms John
-guru.jms.password=somepass
-guru.jms.url=someurl
+#I have commented as in video 91 we have learned yaml so we are putting these files in application.yml
+#it is also in build file and spring will take data from it.
+#guru.jms.username=Jms John
+#guru.jms.password=somepass
+#guru.jms.url=someurl
