Profile configured is given high precedence

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+#we have given multiple profile like en es de. Now we are using de. it means when program run it will
+#create object of de file
+spring.profiles.active=de 
 
 guru.username=John
 guru.password=somepass
